2013-07-29  Chris Searle  <chris@chrissearle.org>

        * Migrate most externals to cocoapods

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.3b11
        * Don't add calendar share option if session has no time slot
        * Submitted to Apple

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.2b10
        * Update footer after refresh

2013-07-03  Chris Searle  <chris@chrissearle.org>

        * 3.2b9
        * Handle sessions without room or time slot
        * Fix crash on returning to favourites list from detail view after removing last favourite (#46)

2013-07-01  Chris Searle  <chris@chrissearle.org>

        * 3.1b8
        * Branding
        * Submitted to Apple

2013-06-29  Chris Searle  <chris@chrissearle.org>

        * 3.0b7
        * Change to using parent/child managedObjectContexts instead of listeners
        * Detail page navigation buttons
        * About page
        * Empty table footers to prompt user
        * Issues fixed: #18, #43, #44

2013-06-26  Chris Searle  <chris@chrissearle.org>

        * 3.0b6
        * iPad support - summary and keywords added
        * Speaker update only refreshes page on change
        * Feature toggle for speaker thumbnail download
        * Issues fixed: #23 #37 #41 #42

2013-06-25  Chris Searle  <chris@chrissearle.org>

        * 3.0b5
        * Core data updates moved to background thread
        * Issues fixed: #39 #40

2013-06-25  Chris Searle  <chris@chrissearle.org>

        * 3.0b4
        * Add room list to advanced search
        * Issues fixed: #36

2013-06-24  Chris Searle  <chris@chrissearle.org>

        * 3.0b3
        * Save current search in user prefs
        * Mark search button blue if advanced search is active
        * Issues fixed: #33 #34

2013-06-22  Chris Searle  <chris@chrissearle.org>

        * 3.0b2
        * Initial 3.x test release
        * iPhone only
        * Pull to refresh
        * List conferences
        * List sessions